--- a/.github/workflows/build-talos-opi5.yaml
+++ b/.github/workflows/build-talos-opi5.yaml
@@ -242,10 +242,45 @@ jobs:
           name: image-pxe
           path: out/**/*
 
+  generate-image-installer:
+    name: Generate Talos Linux image installer for Orange Pi 5
+    needs: [build-kernel, build-imager, build-installer]
+    runs-on:
+      - ubicloud-standard-2-arm
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Login to registry
+        uses: docker/login-action@v3
+        with:
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+
+      - name: Setup crane
+        uses: imjasonh/setup-crane@v0.4
+
+      - name: Generate artifacts
+        run: |
+          make image-installer ARTIFACTS=${{ github.workspace }}/out PUSH=true
+
+      - name: Push artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: image-installer
+          path: out/**/*
+
   release:
     name: Release Talos Linux for Orange Pi 5
     if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') }}
-    needs: [extract-devicetree, generate-images, generate-pxe]
+    needs:
+      [
+        extract-devicetree,
+        generate-images,
+        generate-pxe,
+        generate-image-installer,
+      ]
     runs-on:
       - ubicloud-standard-2-arm
     permissions:
