kernel: switch to collabora kernel

--- a/kernel/config
+++ b/kernel/config
@@ -2421,6 +2421,9 @@ CONFIG_SCSI_COMMON=y
 CONFIG_SCSI=y
 CONFIG_SCSI_DMA=y
 CONFIG_SCSI_PROC_FS=y
+CONFIG_SCSI_SATA=y
+CONFIG_SCSI_SATA_AHCI=y
+CONFIG_SCSI_TIMEOUT=60
 
 #
 # SCSI support type (disk, tape, CD-ROM)
@@ -2512,11 +2515,13 @@ CONFIG_SCSI_VIRTIO=y
 CONFIG_ATA=y
 CONFIG_SATA_HOST=y
 CONFIG_PATA_TIMINGS=y
+CONFIG_ATA_DEBUG=y
 CONFIG_ATA_VERBOSE_ERROR=y
 CONFIG_ATA_FORCE=y
 CONFIG_ATA_ACPI=y
 # CONFIG_SATA_ZPODD is not set
 CONFIG_SATA_PMP=y
+CONFIG_ATA_NONCQ=y
 
 #
 # Controllers with non-SFF native interface
