update Talos to v1.8.0-beta.0

--- a/kernel/config
+++ b/kernel/config
@@ -1348,7 +1348,7 @@ CONFIG_NFT_HASH=y
 # CONFIG_NFT_XFRM is not set
 # CONFIG_NFT_SOCKET is not set
 # CONFIG_NFT_OSF is not set
-# CONFIG_NFT_TPROXY is not set
+CONFIG_NFT_TPROXY=y
 # CONFIG_NFT_SYNPROXY is not set
 CONFIG_NF_DUP_NETDEV=y
 CONFIG_NFT_DUP_NETDEV=y
@@ -1865,8 +1865,9 @@ CONFIG_PCIEAER=y
 # CONFIG_PCIEASPM_POWER_SUPERSAVE is not set
 # CONFIG_PCIEASPM_PERFORMANCE is not set
 CONFIG_PCIE_PME=y
-# CONFIG_PCIE_DPC is not set
-# CONFIG_PCIE_PTM is not set
+CONFIG_PCIE_DPC=y
+CONFIG_PCIE_PTM=y
+CONFIG_PCIE_EDR=y
 CONFIG_PCI_MSI=y
 CONFIG_PCI_QUIRKS=y
 # CONFIG_PCI_DEBUG is not set
@@ -1980,7 +1981,7 @@ CONFIG_PCIE_QCOM=y
 CONFIG_PCI_ENDPOINT=y
 CONFIG_PCI_ENDPOINT_CONFIGFS=y
 # CONFIG_PCI_EPF_TEST is not set
-# CONFIG_PCI_EPF_NTB is not set
+CONFIG_PCI_EPF_NTB=y
 # end of PCI Endpoint
 
 #
@@ -2323,7 +2324,7 @@ CONFIG_BLK_DEV_RBD=y
 #
 # NVME Support
 #
-CONFIG_NVME_AUTH=m
+CONFIG_NVME_AUTH=y
 CONFIG_NVME_CORE=y
 CONFIG_BLK_DEV_NVME=y
 CONFIG_NVME_MULTIPATH=y
@@ -7046,7 +7047,17 @@ CONFIG_DMABUF_HEAPS_SYSTEM=y
 CONFIG_DMABUF_HEAPS_CMA=y
 # end of DMABUF options
 
-# CONFIG_UIO is not set
+CONFIG_UIO=y
+# CONFIG_UIO_CIF is not set
+# CONFIG_UIO_PDRV_GENIRQ is not set
+# CONFIG_UIO_DMEM_GENIRQ is not set
+# CONFIG_UIO_AEC is not set
+# CONFIG_UIO_SERCOS3 is not set
+CONFIG_UIO_PCI_GENERIC=y
+# CONFIG_UIO_NETX is not set
+# CONFIG_UIO_PRUSS is not set
+# CONFIG_UIO_MF624 is not set
+# CONFIG_UIO_HV_GENERIC is not set
 CONFIG_VFIO=m
 CONFIG_VFIO_GROUP=y
 CONFIG_VFIO_CONTAINER=y
